[package]
authors = ["Eric Trombly <etrombly@yahoo.com>"]
edition = "2018"
readme = "README.md"
name = "screen-test"
version = "0.1.0"

[dependencies]
cortex-m = "0.5.8"
cortex-m-rt = "0.6.5"
cortex-m-semihosting = "0.3.2"
panic-semihosting = "0.5.2"
ssd1675 = "0.1.0"
embedded-hal = "0.2.2"
embedded-graphics = "0.4.7"
profont = "0.2.0"
#panic-halt = "0.2.0"

[dependencies.stm32f1]
version = "0.6.0"
features = ["stm32f103", "rt"]

[dependencies.stm32f1xx-hal]
version = "0.2.1"
features = ["stm32f103", "rt"]

[dependencies.cortex-m-rtfm]
version = "0.4.2"

# this lets you use `cargo fix`!
[[bin]]
name = "screen-test"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
