[package]
authors = ["Eric Trombly <etrombly@yahoo.com>"]
edition = "2018"
readme = "README.md"
name = "screen-test"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.2"
cortex-m-rt = "0.6.12"
cortex-m-semihosting = "0.3.5"
#ssd1675 = "0.1.0"
embedded-hal = "0.2.3"
embedded-graphics = "0.5.2"
cortex-m-rtfm = "0.5.1"
usb-device = "0.2.4"
usbd-serial = "0.1"
byteorder = { version = "1", default-features = false }
panic-abort = "0.3.2"

[dependencies.ssd1675]
path = "../ssd1675"

[dependencies.stm32f1]
version = "0.9.0"
features = ["stm32f103", "rt"]

[dependencies.stm32f1xx-hal]
version = "0.5.3"
features = ["stm32f103", "rt", "stm32-usbd"]

# this lets you use `cargo fix`!
[[bin]]
name = "screen-test"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
